[libpas] fix build with pas_assertion_failed and type conversion https://bugs.webkit.org/show_bug.cgi?id=241640

Reviewed by Mark Lam.

Build fix.

* Source/bmalloc/libpas/src/libpas/pas_utils.c:
(pas_report_assertion_failed):
(pas_assertion_failed): Deleted.
* Source/bmalloc/libpas/src/libpas/pas_utils.h:
(pas_assertion_failed):
(pas_assertion_failed_noreturn_silencer1):
(pas_assertion_failed_noreturn_silencer2):
(pas_assertion_failed_noreturn_silencer3):
(pas_assertion_failed_noreturn_silencer4):
(pas_assertion_failed_noreturn_silencer5):
(pas_assertion_failed_noreturn_silencer6):

Canonical link: https://commits.webkit.org/251575@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295570 268f45cc-cd09-0410-ab3c-d52691b4dbfc